fixing overflow

--- a/Web Design (1)/MikeBuglione_WebDesign_Collage.CSS
+++ b/Web Design (1)/MikeBuglione_WebDesign_Collage.CSS
@@ -5,6 +5,7 @@ html{
     -o-background-size: cover;
     background-size: cover;
     z-index: -10000;
+    overflow-x: hidden;
   }
 
   .img1{
